src/assets/styles/components/_web-ide.scss
.web-ide {

  color: white;
  height: 75vh;
  overflow: hidden;
  background: black;

  hr {
    border: 0.6px solid white;
  }

  & ul, & li {
    list-style-type: none;
  }

  .rename-file:hover {
     color: white !important;
  }
  .file {
    &:hover {
      .rename-file {
        color: rgb(120,120,120);
      }

    }
  }

  .rename-file{
    margin-left: 8px;
    color: transparent;
  }

  .editor-window {
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .file-menu,
  .editor-menu {
    display: flex;
    flex-direction: row;
    color: white;
    margin-top: 0;
    margin-bottom: 20px;
    padding-top: 0;
    padding-bottom: 0;
    border-bottom: 1px solid #2e2e2e;

    .save-code,
    .deploy-code,
    .add-folder,
    .upload-file,
    .delete-folder,
    .delete-file,
    .add-file {
      border: 0;
      background: transparent;
      color: white;
      padding: 0px 5px 0px 0px;
      margin: 0px 5px 0px 0px;
    }

    .save-code {
      color: #ee81ee;
    }

    .deploy-code {
    }

    button[disabled] {
      color: #5e5e5e;
    }
  }


  .name-input.disabled {
    display: none;
  }


  .filename-dialog {
      height: 100%;
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
  }

  .code-editor-container {
    padding: 20px;
    height: 100%;
    display: flex;
    flex-direction: column;
  }
  .file-browser-container {
    padding: 20px;
    height: 100%;
    overflow-y: scroll;

    .file-browser {

      margin-left: 0;
      padding-left: 0;

      .folder-container {
        padding-left: 0px;
        margin-bottom: 0px;
        padding-bottom: 0px;
      }
      .file.file-selected {
        color: #ee81ee;
          // background: #4a4a4a !important;
          //border: 1px solid rgb(120,120,120);;
      }
      .file.folder-selected {
          background: #2c2c2c !important;
  
      }

      .package-icon {
        color: #f24242;
      }

      .file,
      .package {

        white-space: nowrap;
        border: 1px solid transparent;
        &.selected {
        }

        background: transparent;
        list-style-type: none;
        color: white ;
        outline: none !important; // TODO: fix this because it is not accessible; style differently
        margin: 0;
        padding: 3px 2px;

        .package-text,
        .filename-text {
          padding-left: 5px;
        }

        .file-icon.fa-js {
          color: #f7df1e;
        }

        .folder-icon {
          color: rgb(143 141 255);
        }
      }
      .folder {
        padding-left: 15px;
      }
      .folder.folder-contents-closed {
        display: none;
      }
      .folder.folder-contents-open {
        display: block;
      }
    }
  }

}

